# Furnisher

./: .gitignore  README.md  big_picture.txt  pip.html  pip2.html  pyproject.toml  serp.json  sikbox.json
.github/workflows/: build-mac.yml
docs/: 00-architecture.md  01-floorplan-schema.md  02-floorplan-authoring.md  03-catalog.md  04-design-agent.md  05-layout-engine.md  06-floorplan-renderer.md  07-room-image-generation.md  08-chat-app.md  09-persistence.md  10-3d-stretch.md  11-dev-setup.md
examples/: my-apartment.placements.json
my-place/: chat.jsonl  placements.json
my-place/snapshots/2026-07-13T17-23-32-100/: placements.json
my-place/snapshots/2026-07-13T17-23-32-800/: placements.json
my-place/snapshots/2026-07-13T17-23-33-700/: placements.json
my-place/snapshots/2026-07-13T17-23-33-800/: placements.json
my-place/snapshots/2026-07-13T17-23-34-600/: placements.json
my-place/snapshots/2026-07-13T17-23-34-700/: placements.json
my-place/snapshots/2026-07-13T17-23-34-900/: placements.json
my-place/snapshots/2026-07-13T17-23-35-100/: placements.json  project.json
my-place/snapshots/2026-07-13T17-23-35-200/: placements.json
my-place/snapshots/2026-07-13T17-23-35-500/: placements.json
packaging/: READ ME FIRST (Mac).txt  build_exe.py
src/furnisher/: cli.py  config.py  desktop.py
tests/: conftest.py  test_catalog.py  test_describe.py  test_editor.py  test_hub.py  test_layout.py  test_loader.py  test_model.py  test_orchestrator.py  test_place.py  test_project.py  test_render.py  test_room_images.py  test_rules.py  test_webapp.py
(+56 files in other folders)
