[project]
name = "furnisher"
version = "0.1.0"
description = "Chat-driven apartment furnishing: floor plans, real catalog items, grounded room renders"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "shapely>=2",
    "pyyaml>=6",
    "typer>=0.12",
    "watchfiles>=0.21",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "google-genai>=1.0",
]

[project.scripts]
furnisher = "furnisher.cli:app"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/furnisher"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
